Fix issue where focus indicator was not visible on captcha squares.

--- a/src/statics/src/captcha/captcha.less
+++ b/src/statics/src/captcha/captcha.less
@@ -24,7 +24,7 @@
         cursor: pointer;
         padding-inline: 0;
         padding-block: 0;
-        opacity: 0;
+        background: transparent;
 
         &:checked {
           background-color: green;
